Update UI layouts for Syslog Config Pattern.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -688,6 +688,11 @@
     "dataProperty": "Data Property",
     "srcNode": "Source Node",
     "dstNode": "Destination Node",
+    "txt-editName": "$t(txt-edit) $t(txt-name)",
+    "txt-addPattern": "Add Pattern",
+    "txt-patternFormat": "Pattern Format",
+    "txt-originalData": "Original Data",
+    "txt-dataResult": "Data Result",
     "txt-formatSettings": "Format Settings",
     "txt-relationship": "Relationship",
     "txt-hostIP": "Host IP",
@@ -704,7 +709,6 @@
     "txt-syslogHostList": "Syslog Host List",
     "txt-editSyslogInfo": "Edit Syslog Info",
     "txt-editHosts": "Edit Hosts",
-    "txt-originalData": "Original Data",
     "txt-timelineUnavailable": "Timeline data is not available",
     "txt-backToList": "$t(txt-back) to $t(txt-syslogManage)",
     "txt-addHost": "Add Host",
