--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -688,6 +688,11 @@
     "dataProperty": "資料解譯結果",
     "srcNode": "來源節點",
     "dstNode": "目的節點",
+    "txt-editName": "$t(txt-edit)$t(txt-name)",
+    "txt-addPattern": "新增Pattern",
+    "txt-patternFormat": "Pattern格式",
+    "txt-originalData": "原始資料",
+    "txt-dataResult": "資料解析結果",
     "txt-formatSettings": "格式設定",
     "txt-relationship": "關聯設定",
     "txt-hostIP": "主機IP",
@@ -704,7 +709,6 @@
     "txt-syslogHostList": "所屬主機列表",
     "txt-editSyslogInfo": "編輯日誌串流",
     "txt-editHosts": "編輯所屬主機資訊",
-    "txt-originalData": "原始資料",
     "txt-timelineUnavailable": "趨勢圖資料不存在",
     "txt-backToList": "$t(txt-back)$t(txt-syslogManage)",
     "txt-addHost": "新增所屬主機",
