Complete Syslog Query Alert changes for query open/save dialog.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -324,6 +324,9 @@
       "txt-noSavedQuery": "No Saved Query Found",
       "txt-noOpenQuery": "Query can not be Blank",
       "txt-addPatternScript": "Custom Alert Query",
+      "txt-patternQuery1": "In",
+      "txt-patternQuery2": "minutes, occurs more than or equal to",
+      "txt-patternQuery3": "times",
       "txt-mark": "Filter / Mark",
       "txt-clear": "Clear",
       "txt-top10text": "TOP 10 Dst. Service/Dst. Host/Dst. IP",
