--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -324,6 +324,9 @@
       "txt-noSavedQuery": "查無儲存條件",
       "txt-noOpenQuery": "查詢條件名稱不得為空白",
       "txt-addPatternScript": "定義告警條件",
+      "txt-patternQuery1": "統整",
+      "txt-patternQuery2": "分鐘資料，超過或等於",
+      "txt-patternQuery3": "次成為告警",
       "txt-mark": "過濾 / 標示",
       "txt-clear": "清除條件",
       "txt-top10text": "前十大目標服務/主機/IP",
