Add validation for Alert threshold count.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -200,7 +200,6 @@
   "txt-listText": "List",
   "txt-uploadPhoto": "Upload Photo",
   "txt-required": "This field is required",
-  "txt-allRequired": "Please check all the required fields",
   "txt-pcapDownloadFail": "Error, please try again",
   "txt-pcapNotAvailable": "PCAP content is not available",
   "txt-file-format-error": "File format should be in ",
@@ -323,9 +322,10 @@
       "txt-addQuery": "Add New Query",
       "txt-noSavedQuery": "No Saved Query Found",
       "txt-noOpenQuery": "Query can not be Blank",
+      "txt-threasholdMax": "Maximum threashold count is 1,000",
       "txt-addPatternScript": "Custom Alert Query",
       "txt-patternQuery1": "In",
-      "txt-patternQuery2": "minutes, occurs more than or equal to",
+      "txt-patternQuery2": "minutes, alert occurs more than or equal to",
       "txt-patternQuery3": "times",
       "txt-mark": "Filter / Mark",
       "txt-clear": "Clear",
