--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -200,7 +200,6 @@
   "txt-listText": "列表",
   "txt-uploadPhoto": "上傳照片",
   "txt-required": "此為必填欄位",
-  "txt-allRequired": "請檢查必填欄位",
   "txt-pcapDownloadFail": "檔案下載失敗",
   "txt-pcapNotAvailable": "找不到PCAP檔案",
   "txt-file-format-error": "檔案格式必須為",
@@ -323,6 +322,7 @@
       "txt-addQuery": "新增查詢條件",
       "txt-noSavedQuery": "查無儲存條件",
       "txt-noOpenQuery": "查詢條件名稱不得為空白",
+      "txt-threasholdMax": "統整次數不得大於1,000",
       "txt-addPatternScript": "定義告警條件",
       "txt-patternQuery1": "統整",
       "txt-patternQuery2": "分鐘資料，超過或等於",
