Start implement APIs for the Syslog Config page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -684,6 +684,7 @@
     "format": "Data Format",
     "avgLogSizeB": "Averge Log Size (byte)",
     "property": "Data Property",
+    "patternName": "Pattern",
     "ip": "IP",
     "name": "Name",
     "value": "Value",
