--- a/locales/en/errors.json
+++ b/locales/en/errors.json
@@ -64,6 +64,7 @@
   "-5006": "Add Ip Device Fail",
   "-5007": "Name already exist",
   "-5008": "Default port for system service is not allowed to use",
+  "-5009": "Log Host IP does not exist",
 
   "txt-param-null": "Parameter is NULL",
   "txt-account-fail" : "Fail to get accounts from AD",
