--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -417,11 +417,12 @@
     "txt-edgeEditNoStartDate": "Edge start date is missing",
     "txt-edgeEditNoEndDate": "Edge end date is missing",
     "txt-edgeEditPastEndDate": "Edge end date must be a future date",
+    "txt-threatEndTimeError": "End time must be before today",
     "txt-ipValidationFail": "Please enter a valid IP/Domain format",
     "txt-threatDateError": "Date cannot be a future date",
     "txt-coordinateError": "Please enter a valid longitude/latitude value",
     "txt-edgeFormatError": "Please check your input format and required fields",
-    "txt-addSuccess": "Threat has been added successfully",    
+    "txt-addSuccess": "Threat has been added successfully",
     "statistics": {
       "txt-sourceIndicators": "Source Indicators",
       "txt-indicatorsTrend": "Indicators Trend",
