--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -417,6 +417,7 @@
     "txt-edgeEditNoStartDate": "Edge起始時間不得為空白",
     "txt-edgeEditNoEndDate": "Edge結束時間不得為空白",
     "txt-edgeEditPastEndDate": "Edge結束時間不得為過去時間",
+    "txt-threatEndTimeError": "結束時間須為今天以前",
     "txt-ipValidationFail": "請輸入正確IP/Domain格式",
     "txt-threatDateError": "時間不得為未來時間",
     "txt-coordinateError": "請輸入正確的經緯度",
