--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -384,6 +384,7 @@
     "txt-geography": "地理分布",
     "txt-addThreat": "新增威脅情資",
     "txt-uploadThreat": "上傳威脅情資",
+    "txt-importThreat": "匯入威脅情資",
     "txt-basicInfo": "基本資訊",
     "txt-editEdge": "編輯Edge",
     "txt-edgeName": "Edge名稱",
