--- a/locales/zh/accounts.json
+++ b/locales/zh/accounts.json
@@ -64,5 +64,6 @@
   "pwd": "密碼",
   "reenterPwd": "再次輸入密碼",
   "pwd-inconsistent":"兩次輸入的內容不相同",
+  "pwd-samePass":"請輸入新的密碼",
   "pwd-empty": "密碼不得為空白"
 }
