--- a/locales/en/accounts.json
+++ b/locales/en/accounts.json
@@ -64,5 +64,6 @@
   "pwd": "Password",
   "reenterPwd": "Retype password",
   "pwd-inconsistent":"First and second typing are different",
+  "pwd-samePass":"Please enter a new password",
   "pwd-empty": "Password cannot be empty"
 }
