--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -384,6 +384,7 @@
     "txt-geography": "地理分布",
     "txt-addThreat": "新增威脅情資",
     "txt-uploadThreat": "上傳威脅情資",
+    "txt-importThreat": "匯入威脅情資",
     "txt-basicInfo": "基本資訊",
     "txt-editEdge": "編輯Edge",
     "txt-edgeName": "Edge名稱",
@@ -479,6 +480,8 @@
     "txt-_NewCreateFile": "新增檔案路徑",
     "txt-includePath": "偵測路徑",
     "txt-excludePath": "偵測排除路徑",
+    "txt-scanProcess": "掃描Process",
+    "txt-scanFilePath": "掃描檔案路徑",
     "txt-saveSettings": "儲存設定",
     "txt-restoreDefault": "還原預設值",
     "txt-reCheck": "重新檢測",
