Add destination tables for Threats charts.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -287,12 +287,16 @@
     "txt-accessRecord": "Access Control Behavior",
     "txt-floorInfo": "Floor",
     "txt-safetyScan": "Safety Scan",
-    "txt-alertThreatLevel": "Threats Level",
-    "txt-alertThreatCount": "Threats Count",
-    "txt-alertThreatSubnet": "Threats in subnet",
-    "txt-alertThreatPrivate": "Threats in private IP",
-    "txt-alertThreatCountry": "Threats in global country",
-    "txt-alertThreatPublic": "Threats in public IP",
+    "txt-alertThreatLevelSrc": "Source Threats Count",
+    "txt-alertThreatCountSrc": "Source Threats Level",
+    "txt-alertThreatSubnetSrc": "Internal Source Masked IP",
+    "txt-alertThreatPrivateSrc": "Internal Source IP",
+    "txt-alertThreatCountrySrc": "External Source Country",
+    "txt-alertThreatPublicSrc": "External Source IP",
+    "txt-alertThreatSubnetDest": "Internal Destination Masked IP",
+    "txt-alertThreatPrivateDest": "Internal Destination IP",
+    "txt-alertThreatCountryDest": "External Destination Country",
+    "txt-alertThreatPublicDest": "External Destination IP",
     "txt-alertNetTrapBlackList": "NetTrap Query Black List"
   },
 
