--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -287,12 +287,16 @@
     "txt-accessRecord": "門禁紀錄",
     "txt-floorInfo": "樓層圖",
     "txt-safetyScan": "安全掃描",
-    "txt-alertThreatLevel": "客戶威脅等級統計",
-    "txt-alertThreatCount": "客戶威脅來源統計",
-    "txt-alertThreatSubnet": "內部威脅網段",
-    "txt-alertThreatPrivate": "內部威脅IP",
-    "txt-alertThreatCountry": "外部威脅國家", 
-    "txt-alertThreatPublic": "外部威脅IP",
+    "txt-alertThreatLevelSrc": "客戶威脅來源等級統計",
+    "txt-alertThreatCountSrc": "客戶威脅來源統計",
+    "txt-alertThreatSubnetSrc": "內部威脅來源網段",
+    "txt-alertThreatPrivateSrc": "內部威脅來源IP",
+    "txt-alertThreatCountrySrc": "外部威脅來源國家", 
+    "txt-alertThreatPublicSrc": "外部威脅來源IP",
+    "txt-alertThreatSubnetDest": "內部威脅目的網段",
+    "txt-alertThreatPrivateDest": "內部威脅目的IP",
+    "txt-alertThreatCountryDest": "外部威脅目的國家",
+    "txt-alertThreatPublicDest": "外部威脅目的IP",
     "txt-alertNetTrapBlackList": "NetTrap黑名單查詢紀錄"
   },
 
