--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -386,10 +386,17 @@
   },
 
   "edge-management": {
+    "txt-today": "今日",
+    "txt-past7days": "最近7天",
+    "txt-customDate": "自訂時間",
+    "txt-addManually": "手動輸入",
+    "txt-addMultiple": "上傳多筆",
+    "txt-importTIMAP": "上傳TIMAP壓縮檔",
+    "txt-threatsFile": "情資檔案",
     "txt-geography": "地理分布",
     "txt-addThreat": "新增威脅情資",
-    "txt-uploadThreat": "上傳威脅情資",
     "txt-importThreat": "匯入威脅情資",
+    "txt-searchThreat": "查詢威脅情資",
     "txt-basicInfo": "基本資訊",
     "txt-editEdge": "編輯Edge",
     "txt-edgeName": "Edge名稱",
