Add MHD trigger all functionality in Inventory page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -465,6 +465,7 @@
   "network-inventory": {
     "txt-deviceList": "Device List",
     "txt-deviceMap": "Device Map",
+    "txt-triggerAll": "Trigger All (HMD)",
     "txt-addIP": "Add IP",
     "txt-manuallyEnter": "Manually Enter",
     "txt-batchUpload": "Batch Upload",
