--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -499,6 +499,7 @@
     "txt-_NewCreateFile": "New Create File Path",
     "txt-includePath": "Include Path",
     "txt-excludePath": "Exclude Path",
+    "txt-processKeyword": "Process Keyword",
     "txt-scanProcess": "Scan Process",
     "txt-scanFilePath": "Scan File Path",
     "txt-saveSettings": "Save",
