Minor bug fix based on QA's feedback.

--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -594,7 +594,7 @@
     "patternName": "Pattern Name",
     "periodMin": "Period Minutes",
     "threshold": "Threshold",
-    "lastUpdateDttm": "Last Update",
+    "lastUpdateDttm": "Last Updated Date Time",
     "queryScript": "Query Script",
     "severity": "Severity"
   },
