Continue work on Host page and implement API.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -261,7 +261,8 @@
 
   "host": {
     "txt-hostList": "Host List",
-    "txt-deviceMap": "Device Map"
+    "txt-deviceMap": "Device Map",
+    "txt-viewInfo": "View Info"
   },
 
   "alert": {
