Continue implement the APIs for Host Assessment page. Add HMD filter for left nav.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -696,6 +696,7 @@
     "ip": "IP",
     "mac": "MAC",
     "owner": "Owner",
+    "floorName": "Floor Name",
     "userAccount": "User Account",
     "userName": "User",
     "disks": "$t(txt-disks)",
