--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -264,7 +264,8 @@
     "txt-hostList": "Host List",
     "txt-deviceMap": "Device Map",
     "txt-viewInfo": "View Info",
-    "txt-hostList2": "Host"
+    "txt-hostList2": "Host",
+    "txt-hostAnalysis": "Host Analysis Info"
   },
 
   "alert": {
