--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -264,7 +264,8 @@
     "txt-hostList": "主機列表",
     "txt-deviceMap": "裝置地圖",
     "txt-viewInfo": "查看內容",
-    "txt-hostList2": "主機清單"
+    "txt-hostList2": "主機清單",
+    "txt-hostAnalysis": "主機分析資訊"
   },
 
   "alert": {
