fixed table header

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -202,7 +202,7 @@
   "txt-map": "Map",  
 
   "txt-decoder": "Decoder",
-  "txt-protocol": "Protocol",
+  "txt-protocol": "Protocol/Service",
 
   "dashboard": {
     "txt-alertIndicator": "Alert Summary",
