--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -17,9 +17,23 @@
 	"txt-audit": "Audit",
 	"txt-audit-success": "Audit Success",
 	"txt-audit-fail": "Audit Fail",
+	"txt-audit-msg": "Whether to Audit Incident",
+	"txt-close": "Close",
+	"txt-close-success": "Close Success",
+	"txt-close-fail": "Close Fail",
+	"txt-close-msg": "Whether to Close Incident",
+	"txt-return": "Return",
+	"txt-return-success": "Return Success",
+	"txt-return-fail": "Return Fail",
+	"txt-return-msg": "Whether to Return Incident",
+	"txt-submit": "Submit",
+	"txt-submit-success": "Submit Success",
+	"txt-submit-fail": "Submit Fail",
+	"txt-submit-msg": "Whether to Submit Incident",
 	"txt-send": "Send",
 	"txt-send-success": "Send Success",
 	"txt-send-fail": "Send Fail",
+	"txt-withdraw-msg": "Whether to Withdraw Incident",
 	"txt-send-msg": "Whether to Send Incident",
 	"txt-sendCheck": ", Whether to Send Incident directly?",
 	"txt-sendCheckHealth": "whether to Send Health Status Statistic CSV ?",
@@ -46,6 +60,48 @@
 	"txt-srcIp": "Source IP",
 	"txt-autoSend": "Monthly Auto",
 	"txt-mustOne": "must required one malicious info",
+	"txt-attachedFile": "Attached File",
+	"txt-attachedFileHint": "File size must less than 20M",
+	"txt-fileMemo": "Attachment Description",
+	"txt-flowTitle": "Event Handling Process",
+	"txt-accidentTitle": "Accident Classification and Abnormal Reason",
+	"txt-reason": "Abnormal Reason",
+	"txt-accidentClassification": "Accident Classification",
+	"txt-reasonDescr": "Accident Reason Description",
+	"txt-accidentDescr": "Accident Description",
+	"txt-accidentInvestigation": "Accident Investigation",
+	"accident":{
+		"txt-webAttack": "Web Attack",
+		"web": {
+			"txt-webDefacement": "Web Defacement",
+			"txt-maliciousMessage": "Malicious Message",
+			"txt-maliciousPage": "Malicious Page",
+			"txt-aptPage": "Phishing Page",
+			"txt-trojan": "Web Trojan",
+			"txt-leak": "Personal Information Leak"
+		},
+		"txt-illegalInvasion": "Illegal Invasion",
+		"invasion": {
+			"txt-systemInvasion": "System Invasion",
+			"txt-implantMalware": "Implant Malware",
+			"txt-abnormalConnection": "Abnormal Connection",
+			"txt-aptMail": "Spam Mail",
+			"txt-leak": "Information Leak"
+		},
+		"txt-dos": "Denial of Service(DDoS/DoS)",
+		"dos": {
+			"txt-serviceInterruption": "Service Interruption",
+			"txt-lowPerformance": "Low Performance"
+		},
+		"txt-deviceProblem": "Device Problem",
+		"device": {
+			"txt-damage": "Device Damage",
+			"txt-abnormalPower": "Abnormal Power",
+			"txt-internetInterruption": "Internet Interruption",
+			"txt-miss": "Device Missing"
+		},
+		"txt-other": "Other"
+	},
 	"unit": {
 		"txt-default": "Default Unit",
 		"txt-isDefault": "Yes",
@@ -84,10 +140,12 @@
 	},
 	"status": {
 		"0": "All",
-		"1": "UnReviewed",
-		"2": "Reviewed",
-		"3": "Submitted",
-		"4": "Deleted"
+		"1": "Signing off",
+		"2": "Signed off",
+		"3": "Closed(Published)",
+		"4": "Deleted",
+		"5": "Editing",
+		"6": "Closed(Unpublished)"
 	},
 	"protectType": {
 		"0": "防毒軟體",
