--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -14,12 +14,27 @@
 	"txt-incident-ttps": "攻擊手法",
 	"txt-prev-page": "上一頁",
 	"txt-next-page": "下一頁",
+	"txt-withdraw": "抽單",
 	"txt-audit": "審核",
 	"txt-audit-success": "審核成功",
 	"txt-audit-fail": "審核失敗",
+	"txt-audit-msg": "是否審核",
+	"txt-close": "結案",
+	"txt-close-success": "結案成功",
+	"txt-close-fail": "結案失敗",
+	"txt-close-msg": "是否結案",
+	"txt-submit": "送審",
+	"txt-submit-success": "送審成功",
+	"txt-submit-fail": "送審失敗",
+	"txt-submit-msg": "是否送審",
 	"txt-send": "發布",
 	"txt-send-success": "發布成功",
 	"txt-send-fail": "發布失敗",
+	"txt-return": "退單",
+	"txt-return-success": "退單成功",
+	"txt-return-fail": "退單失敗",
+	"txt-return-msg": "是否退單",
+	"txt-withdraw-msg": "是否抽單",
 	"txt-send-msg": "是否發布",
 	"txt-sendCheck": "，是否直接發布?",
 	"txt-sendCheckHealth": "是否手動發布健康狀態統計單?",
@@ -46,6 +61,49 @@
 	"txt-srcIp": "來源IP",
 	"txt-autoSend": "每月自動發布",
 	"txt-mustOne": "擇一惡意資訊必填",
+	"txt-attachedFile": "附加檔案",
+	"txt-attachedFileHint": "檔案大小請勿超過20M",
+	"txt-fileMemo": "附件說明",
+	"txt-flowTitle": "事件處理進度",
+	"txt-accidentTitle": "事故分類與異常原因",
+	"txt-reason": "異常原因",
+	"txt-reasonDescr": "事故發生原因",
+	"txt-accidentClassification": "事故分類",
+	"txt-accidentDescr": "事故說明",
+	"txt-accidentInvestigation": "事故調查情況",
+	"accident":{
+		"txt-webAttack": "網頁攻擊",
+		"web": {
+			"txt-webDefacement": "網頁置換",
+			"txt-maliciousMessage": "惡意留言",
+			"txt-maliciousPage": "惡意網頁",
+			"txt-aptPage": "釣魚網頁",
+			"txt-trojan": "網頁木馬",
+			"txt-leak": "個資外洩"
+		},
+		"txt-illegalInvasion": "非法入侵",
+		"invasion": {
+			"txt-systemInvasion": "系統遭入侵",
+			"txt-implantMalware": "植入惡意程式",
+			"txt-abnormalConnection": "異常連線",
+			"txt-aptMail": "發送垃圾郵件",
+			"txt-leak": "資料外洩"
+		},
+		"txt-dos": "阻斷服務(DDoS/DoS)",
+		"dos": {
+			"txt-serviceInterruption": "服務中斷",
+			"txt-lowPerformance": "效能降低"
+		},
+		"txt-deviceProblem": "設備問題",
+		"device": {
+			"txt-damage": "損毀",
+			"txt-abnormalPower": "電力異常",
+			"txt-internetInterruption": "網路服務中斷",
+			"txt-miss": "設備遺失"
+		},
+		"txt-other": "其他"
+	},
+
 	"unit": {
 		"txt-default": "預設機關",
 		"txt-isDefault": "是",
@@ -84,10 +142,12 @@
 	},
 	"status": {
 		"0": "全部",
-		"1": "未審核",
-		"2": "已審核",
-		"3": "已發布",
-		"4": "已刪除"
+		"1": "待審核",
+		"2": "已審核(待發布)",
+		"3": "結案(已發布)",
+		"4": "已刪除",
+		"5": "編輯中",
+		"6": "結案(未發布)"
 	},
 	"protectType": {
 		"0": "防毒軟體",
