Add refresh button for HMD and fix various HMD bugs.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -505,6 +505,7 @@
     "txt-scanFilePath": "Scan File Path",
     "txt-saveSettings": "Save",
     "txt-restoreDefault": "Restore Default",
+    "txt-refresh": "Refresh",
     "txt-reCheck": "Re-check",
     "txt-reCompress": "Re-compress",
     "txt-yaraRules": "Yara Rules",
