--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -505,6 +505,7 @@
     "txt-scanFilePath": "掃描檔案路徑",
     "txt-saveSettings": "儲存設定",
     "txt-restoreDefault": "還原預設值",
+    "txt-refresh": "重新載入",
     "txt-reCheck": "重新檢測",
     "txt-reCompress": "重新壓縮",
     "txt-yaraRules": "Yara Rules",
