Implement multi input box for Yara rule path.

--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -506,8 +506,7 @@
     "_IsPE": "Is PE?",
     "_IsPEextension": "Is PEextension?",
     "_IsVerifyTrust": "Is VerifyTrust?",
-    "hostIdArrCnt": "Available Count in Host",
-    "totalHostCnt": "Total Host Count"
+    "hostIdArrCnt": "Available Count in Host"
   },
   "edgeFields": {
     "agentName": "Name",
