--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -495,6 +495,7 @@
     "txt-suspiciousFilePath": "Suspicious File Path",
     "txt-filePathList": "File Path List",
     "txt-modifiedFileCount": "Modified files",
+    "txt-taskFailure": "Task Failure",
     "txt-_MissingFile": "Missing File Path",
     "txt-_ModifyFile": "Modify File Path",
     "txt-_NewCreateFile": "New Create File Path",
