--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -495,6 +495,7 @@
     "txt-suspiciousFilePath": "可疑檔案路徑",
     "txt-filePathList": "掃描路徑",
     "txt-modifiedFileCount": "異動檔案數",
+    "txt-taskFailure": "執行異常",
     "txt-_MissingFile": "刪除檔案路徑",
     "txt-_ModifyFile": "修改檔案路徑",
     "txt-_NewCreateFile": "新增檔案路徑",
