Add Process Monitor for HMD settings page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -147,7 +147,7 @@
   "txt-configModule": "Configuration Module",
   "txt-host": "Host",
   "txt-settings": "Settings",
-  "txt-setting-eng": "Setting",
+  "txt-setting-eng": "Settings",
   "txt-item": "Item",
   "txt-score": "Score",
   "txt-text": "Text",
