--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -147,7 +147,7 @@
   "txt-configModule": "設定模組",
   "txt-host": "主機",
   "txt-settings": "設定",
-  "txt-setting-eng": "Setting",
+  "txt-setting-eng": "Settings",
   "txt-item": "項目",
   "txt-score": "評分",
   "txt-text": "文字",
