--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -145,6 +145,7 @@
   "txt-commonModule": "Common Module",
   "txt-configModule": "Configuration Module",
   "txt-host": "Host",
+  "txt-group": "Group",
   "txt-settings": "Settings",
   "txt-setting-eng": "Setting",
   "txt-item": "Item",
@@ -415,6 +416,7 @@
     "txt-deleteEdge": "$t(txt-delete)$t(txt-edge)",
     "txt-serviceType": "Service Type",
     "txt-serviceMode": "Service Mode",
+    "txt-editGroup": "$t(txt-edit) $t(txt-group)",
     "txt-longitude": "Longitude",
     "txt-latitude": "Latitude",
     "txt-activatTime": "Datetime",
