Complete the Group Management page for Config Edge.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -416,7 +416,9 @@
     "txt-deleteEdge": "$t(txt-delete)$t(txt-edge)",
     "txt-serviceType": "Service Type",
     "txt-serviceMode": "Service Mode",
-    "txt-editGroup": "$t(txt-edit) $t(txt-group)",
+    "txt-addGroup": "$t(txt-add) $t(txt-group)",
+    "txt-manageGroup": "$t(txt-manage) $t(txt-group)",
+    "txt-deleteGroup": "$t(txt-delete) $t(txt-group)",
     "txt-longitude": "Longitude",
     "txt-latitude": "Latitude",
     "txt-activatTime": "Datetime",
