--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -416,7 +416,9 @@
     "txt-deleteEdge": "$t(txt-delete)$t(txt-edge)",
     "txt-serviceType": "服務類型",
     "txt-serviceMode": "服務模式",
-    "txt-editGroup": "$t(txt-edit)$t(txt-group)",
+    "txt-addGroup": "$t(txt-add)$t(txt-group)",
+    "txt-manageGroup": "$t(txt-group)$t(txt-manage)",
+    "txt-deleteGroup": "$t(txt-delete)$t(txt-group)",
     "txt-longitude": "經度",
     "txt-latitude": "緯度",
     "txt-activatTime": "啟用時間",
