--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -145,6 +145,7 @@
   "txt-commonModule": "一般模組",
   "txt-configModule": "設定模組",
   "txt-host": "主機",
+  "txt-group": "群組",
   "txt-settings": "設定",
   "txt-setting-eng": "Setting",
   "txt-item": "項目",
@@ -415,6 +416,9 @@
     "txt-deleteEdge": "$t(txt-delete)$t(txt-edge)",
     "txt-serviceType": "服務類型",
     "txt-serviceMode": "服務模式",
+    "txt-addGroup": "$t(txt-add)$t(txt-group)",
+    "txt-manageGroup": "$t(txt-group)$t(txt-manage)",
+    "txt-deleteGroup": "$t(txt-delete)$t(txt-group)",
     "txt-longitude": "經度",
     "txt-latitude": "緯度",
     "txt-activatTime": "啟用時間",
