Add Edge group filter and update Edge group management dialog logic.

--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -514,6 +514,7 @@
     "groupList": "Group",
     "descriptionEdge": "Description",
     "keywords": "Keywords",
+    "groups": "Group",
     "serviceType": "Service Type",
     "connectionStatus": "Connection Status",
     "txt-lastAlertDataUpdDT": "Latest alert data update time",
