--- a/locales/zh/tableFields.json
+++ b/locales/zh/tableFields.json
@@ -515,6 +515,7 @@
     "groupList": "群組",
     "descriptionEdge": "說明",
     "keywords": "關鍵字",
+    "groups": "群組",
     "serviceType": "服務種類",
     "connectionStatus": "連線狀態",
     "txt-lastAlertDataUpdDT": "上次告警資料更新時間",
